--- a/res/layout/list_item_module.xml
+++ b/res/layout/list_item_module.xml
@@ -9,7 +9,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:focusable="false" />
 
     <ImageView
         android:id="@+id/icon"
