--- a/res/layout/tab_installer.xml
+++ b/res/layout/tab_installer.xml
@@ -43,6 +43,22 @@
                     android:layout_height="wrap_content"
                     android:text="@string/latestVersion" />
             </TableRow>
+            
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name" />
+
+                <TextView
+                    android:id="@+id/installer_version"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/none" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="wrap_content"
