--- a/res/layout/list_item_version.xml
+++ b/res/layout/list_item_version.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
+    android:paddingBottom="3dp"
     android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
     android:paddingRight="?android:attr/scrollbarSize" >
 
