--- a/res/layout/list_item_version.xml
+++ b/res/layout/list_item_version.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingBottom="3dp"
-    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+    android:paddingLeft="20dp"
     android:paddingRight="?android:attr/scrollbarSize" >
 
     <de.robv.android.xposed.installer.widget.DownloadView
