--- a/res/layout/list_item_download.xml
+++ b/res/layout/list_item_download.xml
@@ -2,10 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingBottom="4dip"
-    android:paddingRight="?android:attr/scrollbarSize"
-    android:paddingTop="4dip" >
+    android:paddingRight="?android:attr/scrollbarSize" >
 
     <TextView
         android:id="@android:id/text1"
