--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="welcome_framework_update_available">@color/download_status_update_available</color>
     <color name="welcome_update_available">@color/download_status_update_available</color>
     <color name="list_divider">#ff0099cc</color>
+    <color name="list_header">#ff0099cc</color>
 
 </resources>
