--- a/res/menu/menu_download.xml
+++ b/res/menu/menu_download.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_search"
+          android:icon="@android:drawable/ic_menu_search"
+          android:title="@string/menuSearch"
+          android:showAsAction="always|collapseActionView"
+          android:actionViewClass="android.widget.SearchView" />
     <item android:id="@+id/menu_refresh"
           android:icon="@drawable/ic_menu_refresh"
           android:title="Reload"
