--- a/res/layout/list_item_download.xml
+++ b/res/layout/list_item_download.xml
@@ -22,11 +22,19 @@
 
     <TextView
         android:id="@+id/downloadStatus"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@android:id/text2"
         android:layout_below="@android:id/text2"
+        android:layout_toLeftOf="@+id/updatedDate"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@id/updatedDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@android:id/text2"
+        android:layout_below="@android:id/text2"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 </RelativeLayout>
