--- a/res/layout/activity_welcome.xml
+++ b/res/layout/activity_welcome.xml
@@ -8,16 +8,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="@string/welcome" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="?android:attr/listPreferredItemPaddingLeft"
+        android:layout_marginTop="10dp"
+        android:text="@string/welcome"
+        android:textSize="18sp" />
 
     <ListView
         android:id="@+id/welcome_list"
-        android:divider="@color/list_divider"
-        android:dividerHeight="1px"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:divider="@null"
+        android:dividerHeight="0dp" >
     </ListView>
 
 </LinearLayout>
