--- a/res/layout/list_item_welcome.xml
+++ b/res/layout/list_item_welcome.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@android:id/text1"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="?android:attr/listPreferredItemPaddingLeft"
