--- a/res/menu/menu_download.xml
+++ b/res/menu/menu_download.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_search"
-          android:icon="@android:drawable/ic_menu_search"
-          android:title="@string/menuSearch"
-          android:showAsAction="always"
-          android:actionViewClass="android.widget.SearchView" />
-    <item android:id="@+id/menu_refresh"
-          android:icon="@drawable/ic_menu_refresh"
-          android:title="Reload"
-          android:showAsAction="always|withText" /> 
-    <item android:id="@+id/menu_sort_status"
-          android:title="@string/menuSortStatus"
-          android:showAsAction="never" />
-    <item android:id="@+id/menu_sort_date"
-          android:title="@string/menuSortDate"
-          android:showAsAction="never" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/menu_search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@android:drawable/ic_menu_search"
+        android:showAsAction="always"
+        android:title="@string/menuSearch"/>
+    <item
+        android:id="@+id/menu_sort"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/download_sorting_title"/>
+    <item
+        android:id="@+id/menu_refresh"
+        android:icon="@drawable/ic_menu_refresh"
+        android:showAsAction="always|withText"
+        android:title="Reload"/>
+
 </menu>
