--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -11,4 +11,14 @@
             android:title="Enable downloads" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="group_experimental"
+        android:title="Experimental" >
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="use_armv5"
+            android:summary="If you enable this, your system performance might either increase, decrease or stay the same. Feel free to try it and report back which effect you see (or if there is none at all). You need to reinstall the framework and reboot after changing this."
+            android:title="Performance experiment" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
