move hardcoded strings to resources

--- a/res/layout/download_details.xml
+++ b/res/layout/download_details.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Versions:"
+            android:text="@string/versions"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold" />
 
