--- a/res/layout/list_item_version.xml
+++ b/res/layout/list_item_version.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Changes:"
+        android:text="@string/changes"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textStyle="bold" />
 
