--- a/res/layout/tab_about.xml
+++ b/res/layout/tab_about.xml
@@ -16,28 +16,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_developers_label"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/about_developers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/about_developers"
             android:text="@string/about_developers"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/about_translator_label"
-            android:id="@+id/about_translator_label"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:text="@string/about_developers_warning"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#ffffbb33" />
 
         <TextView
+            android:id="@+id/about_translator_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/about_translator_label"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/about_translator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/translator"
-            android:id="@+id/about_translator"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -45,12 +54,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/about_version_label"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/version"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/version"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -58,7 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/about_source_label"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -72,7 +83,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/about_support_label"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -93,13 +105,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/about_libraries_label"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/about_libraries"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/about_libraries"
-            android:id="@+id/about_libraries"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
