--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -3,22 +3,22 @@
 
     <PreferenceCategory
         android:key="group_download"
-        android:title="Download" >
+        android:title="@string/settings_group_download" >
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="enable_downloads"
-            android:summary="Allow Xposed Installer to check for updates and new modules"
-            android:title="Enable downloads" />
+            android:summary="@string/settings_enable_downloads_summary"
+            android:title="@string/settings_enable_downloads" />
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="group_experimental"
-        android:title="Experimental" >
+        android:title="@string/settings_group_experimental" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="use_armv5"
-            android:summary="If you enable this, your system performance might either increase, decrease or stay the same. Feel free to try it and report back which effect you see (or if there is none at all). You need to reinstall the framework and reboot after changing this."
-            android:title="Performance experiment" />
+            android:summary="@string/settings_use_armv5_summary"
+            android:title="@string/settings_use_armv5" />
     </PreferenceCategory>
 
 </PreferenceScreen>
