load and display additional information about downloadable modules

--- a/res/layout/download_details.xml
+++ b/res/layout/download_details.xml
@@ -33,6 +33,14 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
+        <LinearLayout
+            android:id="@+id/download_moreinfo_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical" >
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
