--- a/res/layout/tab_installer.xml
+++ b/res/layout/tab_installer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -104,14 +105,16 @@
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/soft_reboot" />
+                android:text="@string/soft_reboot"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/btnReboot"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/reboot" />
+                android:text="@string/reboot"
+                tools:ignore="ButtonStyle" />
 
         </LinearLayout>
     </LinearLayout>
