"App info" is the term used in AOSP for the application details screen

--- a/res/menu/context_menu_modules.xml
+++ b/res/menu/context_menu_modules.xml
@@ -9,7 +9,7 @@
         android:title="@string/module_download_updates"/>
     <item
         android:id="@+id/menu_application_settings"
-        android:title="@string/module_application_settings"/>
+        android:title="@string/module_app_info"/>
     <item
         android:id="@+id/menu_uninstall"
         android:title="@string/module_uninstall"/>
