Add support link to context menu in modules list
This requires a change in the repository, which I will activate when 2.3
is launched (otherwise 2.3 beta users would see duplicate support/source
links or 2.2 users wouldn't see them anymore).

--- a/res/menu/context_menu_modules.xml
+++ b/res/menu/context_menu_modules.xml
@@ -8,7 +8,10 @@
         android:id="@+id/menu_download_updates"
         android:title="@string/module_download_updates"/>
     <item
-        android:id="@+id/menu_application_settings"
+        android:id="@+id/menu_support"
+        android:title="@string/module_support"/>
+    <item
+        android:id="@+id/menu_app_info"
         android:title="@string/module_app_info"/>
     <item
         android:id="@+id/menu_uninstall"
