--- a/res/layout/tab_logs.xml
+++ b/res/layout/tab_logs.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/svLog"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <HorizontalScrollView
+        android:id="@+id/hsvLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
